# wordptr.libwpd

./: AUTHORS  ChangeLog  LICENSE  Makefile.in  README.md  aclocal.m4  configure  configure.ac  configure.backup
autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.3t  traces.4
include/: libwpd.h  libwpd_tests.h  wp_common.h  wp_configuration.h  wp_daemonizer.h  wp_pool.h  wp_string.h
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
src/: Makefile.am  Makefile.in  libwpd.c  wp_common.c  wp_configuration.c  wp_daemonizer.c  wp_pool.c  wp_string.c  wpd.c
src/tests/: libwpd_tests.c
